# reading-group-2025-agentic-ai-and-mcp

./: .gitignore  README.md  presentation.ipynb  pyproject.toml  rise.css  serve_slides.py  time-mcp.py
.github/workflows/: publish.yml
utils/: check_metadata.py  update_rise_config.py
